--- a/nicetranslady-ui/nicetranslady-ui.csproj
+++ b/nicetranslady-ui/nicetranslady-ui.csproj
@@ -13,5 +13,6 @@
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="Pages\MedBay\" />
   </ItemGroup>
 </Project>
