--- a/nicetranslady-ui/nicetranslady-ui.csproj
+++ b/nicetranslady-ui/nicetranslady-ui.csproj
@@ -16,4 +16,7 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
+  </ItemGroup>
 </Project>
