--- a/nicetranslady-ui/nicetranslady-ui.csproj
+++ b/nicetranslady-ui/nicetranslady-ui.csproj
@@ -15,6 +15,11 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
+    <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\lib\lazysizes\" />
+    <Folder Include="wwwroot\lib\lazysizes\dist\" />
+    <Folder Include="Pages\About\" />
+    <Folder Include="Pages\QuizTime\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
